# Expense-Tracker

./: .gitignore  PRD.txt  README.md  projectDETAILS.txt  pyproject.toml  requirements.txt  testinng.py
app/: main.py  os.py
app/api/routes/: auth.py  expense.py
app/core/: config.py  jwt.py  security.py
app/crud/: expense.py
app/db/: base.py  session.py
app/models/: expense.py  user.py
app/schemas/: expense.py  user.py
tests/: test_auth.py
